24-04-2003 :
 - wxbMainFrame : When starting wx-console, the initial key 
      input focus is set into the command window.
 - wxbMainFrame : the user is now prompted when an 
      unexpected "question" is asked).
 - wxbRestorePanel : configure is allowed to change fileset
 - wxbRestorePanel : using dot commands (.clients, .filesets)
 - console_thread : implemented prompt and heartbeat messages

23-04-2003 :
 - general : Don't concatenate lines in csprint, but in wxbDataParser
         (necessary for dot commands)

22-04-2003 :
 - wxbRestorePanel : improved restore appearance
 - wxbRestorePanel : configure is allowed to change client

19-04-2004 :
 - wxbRestorePanel : Locked configure items until first 
   configuration is received
 - wxbRestorePanel : Removed estimate, which slows the restore
   process

18-04-2004 :
 - wxbRestorePanel : wxTreeCtrl::GetParent changed in 
   GetItemParent (thanks to Luca Berra)
 - wxbRestorePanel : The user can now change a part of restore
    configuration

17-04-2004 :
 - wxbRestorePanel modified to use wxbDataParsers
 - created wxbDataTokenizer, which fetches commands results
 - modified the way data is passed to panel (no Prints anymore,
   but wxbDataParsers)
 - win32 : Makefile.in corrected to use ressource file
 - win32 : wx-console is now compatible with MinGW.
 - wxbPanel/wxbMainFrame : Added a locking function (for example, 
   the user can't type something in the console when a restore
   is in progress)

16-04-2004 :
 - wxbRestorePanel : Allow the user to change the status by 
   double-clicking on the check mark

15-04-2004 :
 - project renamed in wx-console
 - console_thread : Uses wx-console.conf instead of console.conf
 - wxbRestorePanel : Change the marked state without redoing a dir

12-04-2004 :
 - The source code is now better documented
 - wxbRestorePanel : Check if a client was selected before
   entering choose mode
 - The source code is now right idented (3 spaces by level)